--- a/Backoffice/Backoffice.csproj
+++ b/Backoffice/Backoffice.csproj
@@ -49,4 +49,10 @@
       <_ContentIncludedByDefault Remove="Shared\Bo\TwoButtonsDialog.razor" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="Dockerfile">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
