--- a/Backoffice/Properties/launchSettings.json
+++ b/Backoffice/Properties/launchSettings.json
@@ -6,7 +6,7 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "x-ssl-user": "alexey.n",
+        "111x-ssl-user": "alexey.n",
         "ConsoleOutputLogLevel": "Default",
         "APP_VERSION": "1.0.0",
         "APP_COMPILATION_DATE": "2021-01-01 11:10:00"
