--- a/Backoffice/Backoffice.csproj
+++ b/Backoffice/Backoffice.csproj
@@ -12,10 +12,10 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Allegiance.Blazor.Highcharts" Version="2.0.15" />
+      <PackageReference Include="Allegiance.Blazor.Highcharts" Version="2.0.16" />
       <PackageReference Include="BlazorDateRangePicker" Version="3.5.0" />
       <PackageReference Include="BlazorInputFile" Version="0.2.0" />
-      <PackageReference Include="Blazorise.Bulma" Version="0.9.3.2" />
+      <PackageReference Include="Blazorise.Bulma" Version="0.9.3.3" />
       <PackageReference Include="CsvHelper" Version="26.1.0" />
       <PackageReference Include="Finance.PciDssPublic.HttpContracts" Version="1.0.0" />
       <PackageReference Include="Flurl.Http" Version="3.0.1" />
@@ -27,20 +27,20 @@
       <PackageReference Include="MyCrm.AutoOwnerProfiles.Grpc" Version="1.0.1" />
       <PackageReference Include="MyCrm.MyCrmTradersUtmParametersGrpcContracts" Version="1.0.3" />
       <PackageReference Include="MyCrm.TradersDocuments.Grpc" Version="1.0.4" />
-      <PackageReference Include="MyJetWallet.Service.AssetsDictionary.Client" Version="1.4.0" />
+      <PackageReference Include="MyJetWallet.Service.AssetsDictionary.Client" Version="1.5.0" />
       <PackageReference Include="MyNoSqlServer.DataWriter" Version="1.3.1" />
       <PackageReference Include="MyTokenGeneratorUtils" Version="1.0.1" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
       <PackageReference Include="protobuf-net.Grpc" Version="1.0.152" />
-      <PackageReference Include="Radzen.Blazor" Version="3.1.8" />
+      <PackageReference Include="Radzen.Blazor" Version="3.1.9" />
       <PackageReference Include="SimpleTrading.BaseMetrics" Version="1.0.3" />
       <PackageReference Include="SimpleTrading.Deposit.Grpc" Version="1.2.14" />
       <PackageReference Include="SimpleTrading.ServiceStatusReporterConnector" Version="1.0.7" />
       <PackageReference Include="Sotsera.Blazor.Toaster" Version="3.0.0" />
       <PackageReference Include="Syncfusion.Blazor" Version="18.4.0.49" />
       <PackageReference Include="MySettingsReader" Version="1.1.1" />
-      <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
-      <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0-preview.2.21154.6" />
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0-preview.2.21154.6" />
       <PackageReference Include="MyJetWallet.Sdk.Service" Version="1.0.10" />
     </ItemGroup>
 
