--- a/Backoffice/Backoffice.csproj
+++ b/Backoffice/Backoffice.csproj
@@ -12,7 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Allegiance.Blazor.Highcharts" Version="2.0.16" />
+      <PackageReference Include="Allegiance.Blazor.Highcharts" Version="2.0.18" />
       <PackageReference Include="BlazorDateRangePicker" Version="3.5.0" />
       <PackageReference Include="BlazorInputFile" Version="0.2.0" />
       <PackageReference Include="Blazorise.Bulma" Version="0.9.3.3" />
@@ -27,7 +27,8 @@
       <PackageReference Include="MyCrm.AutoOwnerProfiles.Grpc" Version="1.0.1" />
       <PackageReference Include="MyCrm.MyCrmTradersUtmParametersGrpcContracts" Version="1.0.3" />
       <PackageReference Include="MyCrm.TradersDocuments.Grpc" Version="1.0.4" />
-      <PackageReference Include="MyJetWallet.Service.AssetsDictionary.Client" Version="1.5.0" />
+      <PackageReference Include="MyJetWallet.BitGo.Settings" Version="1.0.0" />
+      <PackageReference Include="MyJetWallet.Service.AssetsDictionary.Client" Version="1.5.3" />
       <PackageReference Include="MyNoSqlServer.DataWriter" Version="1.3.1" />
       <PackageReference Include="MyTokenGeneratorUtils" Version="1.0.1" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
