--- a/Backoffice/Backoffice.csproj
+++ b/Backoffice/Backoffice.csproj
@@ -12,7 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Allegiance.Blazor.Highcharts" Version="2.0.18" />
+      <PackageReference Include="Allegiance.Blazor.Highcharts" Version="2.0.19" />
       <PackageReference Include="BlazorDateRangePicker" Version="3.5.0" />
       <PackageReference Include="BlazorInputFile" Version="0.2.0" />
       <PackageReference Include="Blazorise.Bulma" Version="0.9.3.3" />
@@ -29,20 +29,22 @@
       <PackageReference Include="MyCrm.TradersDocuments.Grpc" Version="1.0.4" />
       <PackageReference Include="MyJetWallet.BitGo.Settings" Version="1.0.0" />
       <PackageReference Include="MyJetWallet.Service.AssetsDictionary.Client" Version="1.5.3" />
+      <PackageReference Include="MyJetWallet.Service.Balances.Client" Version="1.0.5" />
+      <PackageReference Include="MyJetWallet.Service.Liquidity.Engine.Client" Version="1.0.3" />
       <PackageReference Include="MyNoSqlServer.DataWriter" Version="1.3.1" />
       <PackageReference Include="MyTokenGeneratorUtils" Version="1.0.1" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
       <PackageReference Include="protobuf-net.Grpc" Version="1.0.152" />
-      <PackageReference Include="Radzen.Blazor" Version="3.1.9" />
+      <PackageReference Include="Radzen.Blazor" Version="3.1.10" />
       <PackageReference Include="SimpleTrading.BaseMetrics" Version="1.0.3" />
       <PackageReference Include="SimpleTrading.Deposit.Grpc" Version="1.2.14" />
       <PackageReference Include="SimpleTrading.ServiceStatusReporterConnector" Version="1.0.7" />
       <PackageReference Include="Sotsera.Blazor.Toaster" Version="3.0.0" />
-      <PackageReference Include="Syncfusion.Blazor" Version="18.4.0.49" />
+      <PackageReference Include="Syncfusion.Blazor" Version="19.1.0.54" />
       <PackageReference Include="MySettingsReader" Version="1.1.1" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0-preview.2.21154.6" />
       <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0-preview.2.21154.6" />
-      <PackageReference Include="MyJetWallet.Sdk.Service" Version="1.0.10" />
+      <PackageReference Include="MyJetWallet.Sdk.Service" Version="1.1.0" />
     </ItemGroup>
 
     <ItemGroup>
