--- a/Backoffice/Backoffice.csproj
+++ b/Backoffice/Backoffice.csproj
@@ -31,7 +31,9 @@
       <PackageReference Include="MyJetWallet.Service.AssetsDictionary.Client" Version="1.5.3" />
       <PackageReference Include="MyJetWallet.Service.Balances.Client" Version="1.0.5" />
       <PackageReference Include="MyJetWallet.Service.Liquidity.Engine.Client" Version="1.0.3" />
+      <PackageReference Include="MyJetWallet.Service.MatchingEngine.PriceSource.Client" Version="1.1.0" />
       <PackageReference Include="MyNoSqlServer.DataWriter" Version="1.3.1" />
+      <PackageReference Include="MyNoSqlServer.DataReader" Version="1.3.1" />
       <PackageReference Include="MyTokenGeneratorUtils" Version="1.0.1" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
       <PackageReference Include="protobuf-net.Grpc" Version="1.0.152" />
