--- a/Backoffice/Backoffice.csproj
+++ b/Backoffice/Backoffice.csproj
@@ -32,6 +32,7 @@
       <PackageReference Include="MyJetWallet.Service.Balances.Client" Version="1.0.5" />
       <PackageReference Include="MyJetWallet.Service.Liquidity.Engine.Client" Version="1.0.3" />
       <PackageReference Include="MyJetWallet.Service.MatchingEngine.PriceSource.Client" Version="1.1.0" />
+      <PackageReference Include="MyJetWallet.Service.Simulation.FTX.Client" Version="1.0.0" />
       <PackageReference Include="MyNoSqlServer.DataWriter" Version="1.3.1" />
       <PackageReference Include="MyNoSqlServer.DataReader" Version="1.3.1" />
       <PackageReference Include="MyTokenGeneratorUtils" Version="1.0.1" />
