--- a/Backoffice/Backoffice.csproj
+++ b/Backoffice/Backoffice.csproj
@@ -30,7 +30,8 @@
       <PackageReference Include="MyJetWallet.BitGo.Settings" Version="1.0.0" />
       <PackageReference Include="MyJetWallet.Service.AssetsDictionary.Client" Version="1.5.3" />
       <PackageReference Include="MyJetWallet.Service.Balances.Client" Version="1.0.5" />
-      <PackageReference Include="MyJetWallet.Service.Liquidity.Engine.Client" Version="1.0.5" />
+      <PackageReference Include="MyJetWallet.Service.Liquidity.Engine.Client" Version="1.0.9" />
+      <PackageReference Include="MyJetWallet.Service.Liquidity.Reports.Client" Version="1.0.3" />
       <PackageReference Include="MyJetWallet.Service.MatchingEngine.PriceSource.Client" Version="1.1.0" />
       <PackageReference Include="MyJetWallet.Service.Simulation.FTX.Client" Version="1.0.1" />
       <PackageReference Include="MyNoSqlServer.DataWriter" Version="1.3.1" />
