--- a/Backoffice/Backoffice.csproj
+++ b/Backoffice/Backoffice.csproj
@@ -30,6 +30,7 @@
       <PackageReference Include="MyJetWallet.BitGo.Settings" Version="1.0.0" />
       <PackageReference Include="MyJetWallet.Service.AssetsDictionary.Client" Version="1.5.4" />
       <PackageReference Include="MyJetWallet.Service.Balances.Client" Version="1.0.5" />
+      <PackageReference Include="MyJetWallet.Service.ClientWallets.Client" Version="1.0.4" />
       <PackageReference Include="MyJetWallet.Service.Liquidity.Engine.Client" Version="1.1.12" />
       <PackageReference Include="MyJetWallet.Service.Liquidity.Reports.Client" Version="1.0.7" />
       <PackageReference Include="MyJetWallet.Service.MatchingEngine.PriceSource.Client" Version="1.1.0" />
@@ -54,6 +55,7 @@
     <ItemGroup>
       <_ContentIncludedByDefault Remove="Shared\Bo\BaseDialog.razor" />
       <_ContentIncludedByDefault Remove="Shared\Bo\TwoButtonsDialog.razor" />
+      <_ContentIncludedByDefault Remove="Components\Liquidity\Hedging\HedgeComponent.razor" />
     </ItemGroup>
 
     <ItemGroup>
