--- a/Backoffice/Backoffice.csproj
+++ b/Backoffice/Backoffice.csproj
@@ -14,12 +14,13 @@
     <ItemGroup>
       <PackageReference Include="Allegiance.Blazor.Highcharts" Version="2.0.20" />
       <PackageReference Include="BlazorDateRangePicker" Version="3.5.0" />
+      <PackageReference Include="Blazored.Typeahead" Version="4.6.0" />
       <PackageReference Include="BlazorInputFile" Version="0.2.0" />
       <PackageReference Include="Blazorise.Bulma" Version="0.9.3.4" />
       <PackageReference Include="CsvHelper" Version="26.1.0" />
       <PackageReference Include="Finance.PciDssPublic.HttpContracts" Version="1.0.0" />
       <PackageReference Include="Flurl.Http" Version="3.0.1" />
-      <PackageReference Include="Grpc.Net.Client" Version="2.37.0" />
+      <PackageReference Include="Grpc.Net.Client" Version="2.36.0" />
       <PackageReference Include="Highsoft.Highcharts" Version="9.0.1.1" />
       <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.17.0" />
       <PackageReference Include="MW.Blazor.TagSelector" Version="1.2.3" />
@@ -31,8 +32,8 @@
       <PackageReference Include="MyJetWallet.Service.AssetsDictionary.Client" Version="1.5.4" />
       <PackageReference Include="MyJetWallet.Service.Balances.Client" Version="1.0.5" />
       <PackageReference Include="MyJetWallet.Service.ClientWallets.Client" Version="1.0.4" />
-      <PackageReference Include="MyJetWallet.Service.Liquidity.Engine.Client" Version="1.2.2" />
-      <PackageReference Include="MyJetWallet.Service.Liquidity.Reports.Client" Version="1.0.8" />
+      <PackageReference Include="MyJetWallet.Service.Liquidity.Engine.Client" Version="1.2.1" />
+      <PackageReference Include="MyJetWallet.Service.Liquidity.Reports.Client" Version="1.0.7" />
       <PackageReference Include="MyJetWallet.Service.MatchingEngine.PriceSource.Client" Version="1.2.1" />
       <PackageReference Include="MyJetWallet.Service.Simulation.FTX.Client" Version="1.2.2" />
       <PackageReference Include="MyNoSqlServer.DataWriter" Version="1.3.1" />
@@ -40,15 +41,17 @@
       <PackageReference Include="MyTokenGeneratorUtils" Version="1.0.1" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
       <PackageReference Include="protobuf-net.Grpc" Version="1.0.152" />
+      <PackageReference Include="Radzen.Blazor" Version="3.2.5" />
       <PackageReference Include="Radzen.Blazor" Version="3.2.6" />
       <PackageReference Include="SimpleTrading.BaseMetrics" Version="1.0.3" />
       <PackageReference Include="SimpleTrading.Deposit.Grpc" Version="1.2.14" />
       <PackageReference Include="SimpleTrading.ServiceStatusReporterConnector" Version="1.0.7" />
       <PackageReference Include="Sotsera.Blazor.Toaster" Version="3.0.0" />
-      <PackageReference Include="Syncfusion.Blazor" Version="19.1.0.57" />
+      <PackageReference Include="Syncfusion.Blazor" Version="19.1.0.56" />
       <PackageReference Include="MySettingsReader" Version="1.2.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0-preview.3.21201.4" />
       <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0-preview.3.21201.4" />
+      <PackageReference Include="MyJetWallet.Sdk.Service" Version="1.3.0" />
       <PackageReference Include="MyJetWallet.Sdk.Service" Version="1.3.11" />
     </ItemGroup>
 
