--- a/Backoffice/Backoffice.csproj
+++ b/Backoffice/Backoffice.csproj
@@ -29,6 +29,7 @@
       <PackageReference Include="MyCrm.MyCrmTradersUtmParametersGrpcContracts" Version="1.0.3" />
       <PackageReference Include="MyCrm.TradersDocuments.Grpc" Version="1.0.4" />
       <PackageReference Include="MyJetWallet.BitGo.Settings" Version="1.0.0" />
+      <PackageReference Include="MyJetWallet.Service.ActiveOrders.Client" Version="1.0.2" />
       <PackageReference Include="MyJetWallet.Service.AssetsDictionary.Client" Version="1.5.4" />
       <PackageReference Include="MyJetWallet.Service.BalanceHistory.Client" Version="1.6.1" />
       <PackageReference Include="MyJetWallet.Service.Balances.Client" Version="1.0.7" />
@@ -38,6 +39,7 @@
       <PackageReference Include="MyJetWallet.Service.Liquidity.Reports.Client" Version="1.0.8" />
       <PackageReference Include="MyJetWallet.Service.MatchingEngine.PriceSource.Client" Version="1.2.1" />
       <PackageReference Include="MyJetWallet.Service.Simulation.FTX.Client" Version="1.2.2" />
+      <PackageReference Include="MyJetWallet.Service.TradeHistory.Client" Version="1.1.0" />
       <PackageReference Include="MyNoSqlServer.DataWriter" Version="1.3.1" />
       <PackageReference Include="MyNoSqlServer.DataReader" Version="1.3.1" />
       <PackageReference Include="MyTokenGeneratorUtils" Version="1.0.1" />
