--- a/Backoffice/Backoffice.csproj
+++ b/Backoffice/Backoffice.csproj
@@ -38,6 +38,7 @@
       <PackageReference Include="MyJetWallet.Service.Liquidity.Engine.Client" Version="1.2.2" />
       <PackageReference Include="MyJetWallet.Service.Liquidity.Reports.Client" Version="1.0.8" />
       <PackageReference Include="MyJetWallet.Service.MatchingEngine.PriceSource.Client" Version="1.2.1" />
+      <PackageReference Include="MyJetWallet.Service.Service.KYC.Client" Version="1.0.6" />
       <PackageReference Include="MyJetWallet.Service.Simulation.FTX.Client" Version="1.2.2" />
       <PackageReference Include="MyJetWallet.Service.TradeHistory.Client" Version="1.1.1" />
       <PackageReference Include="MyNoSqlServer.DataWriter" Version="1.3.1" />
