--- a/Backoffice/Backoffice.csproj
+++ b/Backoffice/Backoffice.csproj
@@ -35,7 +35,7 @@
       <PackageReference Include="MyJetWallet.Service.Balances.Client" Version="1.0.7" />
       <PackageReference Include="MyJetWallet.Service.ChangeBalanceGateway.Client" Version="1.7.1" />
       <PackageReference Include="MyJetWallet.Service.ClientWallets.Client" Version="1.1.4" />
-      <PackageReference Include="MyJetWallet.Service.Liquidity.Engine.Client" Version="1.3.2" />
+      <PackageReference Include="MyJetWallet.Service.Liquidity.Engine.Client" Version="1.3.4" />
       <PackageReference Include="MyJetWallet.Service.Liquidity.Reports.Client" Version="1.0.9" />
       <PackageReference Include="MyJetWallet.Service.MatchingEngine.PriceSource.Client" Version="1.2.1" />
       <PackageReference Include="MyJetWallet.Service.Service.KYC.Client" Version="1.0.6" />
@@ -62,6 +62,10 @@
       <_ContentIncludedByDefault Remove="Shared\Bo\BaseDialog.razor" />
       <_ContentIncludedByDefault Remove="Shared\Bo\TwoButtonsDialog.razor" />
       <_ContentIncludedByDefault Remove="Components\Liquidity\Hedging\HedgeComponent.razor" />
+      <_ContentIncludedByDefault Remove="Components\Liquidity\Market\InstrumentDetailsComponent.razor" />
+      <_ContentIncludedByDefault Remove="Components\Liquidity\Market\LiquidityEngineComponent.razor" />
+      <_ContentIncludedByDefault Remove="Components\Liquidity\Market\LpOrderBookComponent.razor" />
+      <_ContentIncludedByDefault Remove="Components\Liquidity\Market\MarketMakerRowComponent.razor" />
     </ItemGroup>
 
     <ItemGroup>
