--- a/Backoffice.Services/Backoffice.Services.csproj
+++ b/Backoffice.Services/Backoffice.Services.csproj
@@ -12,7 +12,7 @@
       <PackageReference Include="DotNetCoreDecorators" Version="1.0.21" />
       <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0-preview.3.21201.4" />
-      <PackageReference Include="MyCrm.Accounts.Grpc" Version="1.0.21" />
+      <PackageReference Include="MyCrm.Accounts.Grpc" Version="1.0.20" />
       <PackageReference Include="MyCRM.AccountTransactions.Grpc" Version="1.0.12" />
       <PackageReference Include="MyCrm.AuditLog.Grpc" Version="1.0.4" />
       <PackageReference Include="MyCrm.Auth.GrpcContracts" Version="1.0.7" />
@@ -33,6 +33,7 @@
         <PackageReference Include="MyCrm.Withdrawals.Grpc" Version="1.0.17" />
         <PackageReference Include="MyJetWallet.Service.AssetsDictionary.Client" Version="1.5.4" />
         <PackageReference Include="MyJetWallet.Service.ClientWallets.Client" Version="1.1.4" />
+        <PackageReference Include="MyJetWallet.Service.Simulation.FTX.Client" Version="1.2.2" />
         <PackageReference Include="MyNoSqlServer.DataWriter" Version="1.3.1" />
       <PackageReference Include="SimpleTrading.Deposit.Grpc" Version="1.2.14" />
     </ItemGroup>
