--- a/Backoffice.Services/Backoffice.Services.csproj
+++ b/Backoffice.Services/Backoffice.Services.csproj
@@ -30,11 +30,12 @@
       <PackageReference Include="MyCrm.TraderOnlineData.Grpc" Version="1.0.4" />
       <PackageReference Include="MyCrm.AffiliateAccess.Grpc" Version="1.0.2" />
       <PackageReference Include="MyCrm.TradersDocuments.Grpc" Version="1.0.4" />
-        <PackageReference Include="MyCrm.Withdrawals.Grpc" Version="1.0.17" />
-        <PackageReference Include="MyJetWallet.Service.AssetsDictionary.Client" Version="1.5.4" />
-        <PackageReference Include="MyJetWallet.Service.ClientWallets.Client" Version="1.1.4" />
-        <PackageReference Include="MyJetWallet.Service.Simulation.FTX.Client" Version="1.2.2" />
-        <PackageReference Include="MyNoSqlServer.DataWriter" Version="1.3.1" />
+      <PackageReference Include="MyCrm.Withdrawals.Grpc" Version="1.0.17" />
+      <PackageReference Include="MyJetWallet.BitGo.Settings" Version="1.0.0" />
+      <PackageReference Include="MyJetWallet.Service.AssetsDictionary.Client" Version="1.5.4" />
+      <PackageReference Include="MyJetWallet.Service.ClientWallets.Client" Version="1.1.4" />
+      <PackageReference Include="MyJetWallet.Service.Simulation.FTX.Client" Version="1.2.2" />
+      <PackageReference Include="MyNoSqlServer.DataWriter" Version="1.3.1" />
       <PackageReference Include="SimpleTrading.Deposit.Grpc" Version="1.2.14" />
     </ItemGroup>
 
