--- a/Backoffice/Backoffice.csproj
+++ b/Backoffice/Backoffice.csproj
@@ -39,6 +39,8 @@
       <PackageReference Include="MyJetWallet.Service.Liquidity.Reports.Client" Version="1.0.9" />
       <PackageReference Include="MyJetWallet.Service.MatchingEngine.PriceSource.Client" Version="1.2.1" />
       <PackageReference Include="MyJetWallet.Service.Service.KYC.Client" Version="1.0.6" />
+      <PackageReference Include="MyJetWallet.Service.SmsProviderMock.Client" Version="1.0.4" />
+      <PackageReference Include="MyJetWallet.Service.SmsSender.Client" Version="1.0.10" />
       <PackageReference Include="MyJetWallet.Service.Simulation.FTX.Client" Version="1.2.2" />
       <PackageReference Include="MyJetWallet.Service.TradeHistory.Client" Version="1.1.1" />
       <PackageReference Include="MyNoSqlServer.DataWriter" Version="1.3.1" />
@@ -56,6 +58,8 @@
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0-preview.3.21201.4" />
       <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0-preview.3.21201.4" />
       <PackageReference Include="MyJetWallet.Sdk.Service" Version="1.3.15" />
+      <PackageReference Include="Service.SmsSender.Grpc" Version="1.0.4" />
+      <PackageReference Include="Service.SmsSender.Domain.Models" Version="1.0.0" />
     </ItemGroup>
 
     <ItemGroup>
