--- a/Backoffice/Properties/launchSettings.json
+++ b/Backoffice/Properties/launchSettings.json
@@ -2,15 +2,17 @@
   "profiles": {
     "Backoffice": {
       "commandName": "Project",
-      "dotnetRunMessages": "true",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "111x-ssl-user": "alexey.n",
         "ConsoleOutputLogLevel": "Default",
-        "APP_VERSION": "1.0.0",
-        "APP_COMPILATION_DATE": "2021-01-01 11:10:00"
-      }
+        "GRPC_PORT": "87",
+        "111x-ssl-user": "alexey.n",
+        "APP_COMPILATION_DATE": "2021-01-01 11:10:00",
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "HTTP_PORT": "8087",
+        "APP_VERSION": "1.0.0"
+      },
+      "dotnetRunMessages": "true"
     }
   }
 }
