--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -60,6 +60,10 @@ jobs:
         add_git_labels: true
         build_args: app_version=myjetwallet.adminpanel-test:latest,app_compilation_date=${{ steps.current-time.outputs.formattedTime }}
 
+  restart:
+    runs-on: ubuntu-latest    
+    needs: build
+    steps:
     - name: Restart service
       uses: Myjetwallet/kube-restart-pods@master
       env:
