--- a/Backoffice.Services/Backoffice.Services.csproj
+++ b/Backoffice.Services/Backoffice.Services.csproj
@@ -24,7 +24,7 @@
       <PackageReference Include="MyCRM.Logs.GrpcContracts" Version="1.0.11" />
       <PackageReference Include="MyCrm.MyCrmTradersUtmParametersGrpcContracts" Version="1.0.3" />
       <PackageReference Include="MyCrm.PaymentReport.GrpcContracts" Version="1.0.4" />
-      <PackageReference Include="MyCrm.PersonalData.Grpc" Version="1.0.45" />
+      <PackageReference Include="MyCrm.PersonalData.Grpc" Version="1.0.47" />
       <PackageReference Include="MyCrm.TraderCrmStatuses.Grpc" Version="1.0.5" />
       <PackageReference Include="MyCrm.TraderMarketingSalesData.Grpc" Version="1.0.8" />
       <PackageReference Include="MyCrm.TraderOnlineData.Grpc" Version="1.0.5" />
@@ -34,7 +34,8 @@
       <PackageReference Include="MyJetWallet.BitGo.Settings" Version="1.0.6" />
       <PackageReference Include="MyJetWallet.Service.AssetsDictionary.Client" Version="1.5.4" />
       <PackageReference Include="MyJetWallet.Service.ClientWallets.Client" Version="1.2.0" />
-      <PackageReference Include="MyJetWallet.Service.Simulation.FTX.Client" Version="1.2.2" />
+      <PackageReference Include="MyJetWallet.Service.Simulation.FTX.Client" Version="1.2.5" />
+      <PackageReference Include="MyJetWallet.Service.Simulation.Binance.Client" Version="1.0.3" />
       <PackageReference Include="MyNoSqlServer.DataWriter" Version="1.3.1" />
       <PackageReference Include="SimpleTrading.Deposit.Grpc" Version="1.2.14" />
     </ItemGroup>
