--- a/Backoffice/Backoffice.csproj
+++ b/Backoffice/Backoffice.csproj
@@ -17,7 +17,7 @@
       <PackageReference Include="Blazored.Typeahead" Version="4.6.0" />
       <PackageReference Include="BlazorInputFile" Version="0.2.0" />
       <PackageReference Include="Blazorise.Bulma" Version="0.9.3.9" />
-      <PackageReference Include="CsvHelper" Version="27.1.0" />
+      <PackageReference Include="CsvHelper" Version="27.1.1" />
       <PackageReference Include="Finance.PciDssPublic.HttpContracts" Version="1.0.0" />
       <PackageReference Include="Flurl.Http" Version="3.2.0" />
       <PackageReference Include="Grpc.Net.Client" Version="2.38.0" />
@@ -46,7 +46,8 @@
       <PackageReference Include="MyJetWallet.Service.Service.KYC.Client" Version="1.0.6" />
       <PackageReference Include="MyJetWallet.Service.SmsProviderMock.Client" Version="1.0.17" />
       <PackageReference Include="MyJetWallet.Service.SmsSender.Client" Version="1.2.3" />
-      <PackageReference Include="MyJetWallet.Service.Simulation.FTX.Client" Version="1.2.2" />
+      <PackageReference Include="MyJetWallet.Service.Simulation.FTX.Client" Version="1.2.5" />
+      <PackageReference Include="MyJetWallet.Service.Simulation.Binance.Client" Version="1.0.3" />
       <PackageReference Include="MyNoSqlServer.DataWriter" Version="1.3.1" />
       <PackageReference Include="MyNoSqlServer.DataReader" Version="1.3.1" />
       <PackageReference Include="MyTokenGeneratorUtils" Version="1.0.1" />
@@ -61,7 +62,7 @@
       <PackageReference Include="MySettingsReader" Version="1.2.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0-preview.5.21301.5" />
       <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0-preview.5.21301.5" />
-      <PackageReference Include="MyJetWallet.Sdk.Service" Version="1.5.4" />
+      <PackageReference Include="MyJetWallet.Sdk.Service" Version="1.5.5" />
     </ItemGroup>
 
     <ItemGroup>
