--- a/Backoffice.Services/Backoffice.Services.csproj
+++ b/Backoffice.Services/Backoffice.Services.csproj
@@ -32,6 +32,7 @@
       <PackageReference Include="MyCrm.TradersDocuments.Grpc" Version="1.0.4" />
       <PackageReference Include="MyCrm.Withdrawals.Grpc" Version="1.0.17" />
       <PackageReference Include="MyJetWallet.BitGo.Settings" Version="1.0.6" />
+      <PackageReference Include="MyJetWallet.Sdk.ExternalMarketsSettings" Version="1.0.0" />
       <PackageReference Include="MyJetWallet.Service.AssetsDictionary.Client" Version="1.5.4" />
       <PackageReference Include="MyJetWallet.Service.ClientWallets.Client" Version="1.2.0" />
       <PackageReference Include="MyJetWallet.Service.External.B2C2.Client" Version="1.0.0" />
