--- a/Backoffice/Backoffice.csproj
+++ b/Backoffice/Backoffice.csproj
@@ -29,6 +29,7 @@
       <PackageReference Include="MyCrm.MyCrmTradersUtmParametersGrpcContracts" Version="1.0.3" />
       <PackageReference Include="MyCrm.TradersDocuments.Grpc" Version="1.0.4" />
       <PackageReference Include="MyJetWallet.BitGo.Settings" Version="1.0.6" />
+      <PackageReference Include="MyJetWallet.Domain.ExternalMarketApi" Version="1.1.4" />
       <PackageReference Include="MyJetWallet.Sdk.Authorization" Version="1.1.0" />
       <PackageReference Include="MyJetWallet.Sdk.ExternalMarketsSettings" Version="1.0.0" />
       <PackageReference Include="MyJetWallet.Sdk.Grpc" Version="1.0.2" />
@@ -42,6 +43,7 @@
       <PackageReference Include="MyJetWallet.Service.Liquidity.Converter.Client" Version="1.1.1" />
       <PackageReference Include="MyJetWallet.Service.Liquidity.Engine.Client" Version="1.4.1" />
       <PackageReference Include="MyJetWallet.Service.Liquidity.Portfolio.Client" Version="1.3.4" />
+      <PackageReference Include="MyJetWallet.Service.Liquidity.PortfolioHedger.Client" Version="1.0.1" />
       <PackageReference Include="MyJetWallet.Service.Liquidity.Reports.Client" Version="1.0.9" />
       <PackageReference Include="MyJetWallet.Service.MatchingEngine.PriceSource.Client" Version="1.2.1" />
       <PackageReference Include="MyJetWallet.Service.PushNotification.Client" Version="1.2.4.1" />
