--- a/Backoffice/Backoffice.csproj
+++ b/Backoffice/Backoffice.csproj
@@ -38,6 +38,7 @@
       <PackageReference Include="MyJetWallet.Service.AssetsDictionary.Client" Version="1.6.2" />
       <PackageReference Include="MyJetWallet.Service.BalanceHistory.Client" Version="2.0.2" />
       <PackageReference Include="MyJetWallet.Service.Balances.Client" Version="1.0.7" />
+      <PackageReference Include="MyJetWallet.Service.Bitgo.DepositDetector.Client" Version="1.1.7" />
       <PackageReference Include="MyJetWallet.Service.ChangeBalanceGateway.Client" Version="1.7.1" />
       <PackageReference Include="MyJetWallet.Service.ClientWallets.Client" Version="1.2.0" />
       <PackageReference Include="MyJetWallet.Service.Liquidity.Converter.Client" Version="1.1.1" />
