--- a/Backoffice/Backoffice.csproj
+++ b/Backoffice/Backoffice.csproj
@@ -52,6 +52,7 @@
       <PackageReference Include="MyJetWallet.Service.Liquidity.Reports.Client" Version="1.1.5" />
       <PackageReference Include="MyJetWallet.Service.MatchingEngine.PriceSource.Client" Version="3.0.0" />
       <PackageReference Include="MyJetWallet.Service.MessageTemplates.Client" Version="1.0.3" />
+      <PackageReference Include="MyJetWallet.Service.NewsRepository.Client" Version="1.0.0" />
       <PackageReference Include="MyJetWallet.Service.PriceHistory.Client" Version="1.1.5" />
       <PackageReference Include="MyJetWallet.Service.PushNotification.Client" Version="1.2.4.1" />
       <PackageReference Include="MyJetWallet.Service.Service.KYC.Client" Version="1.0.6" />
