--- a/Backoffice/Backoffice.csproj
+++ b/Backoffice/Backoffice.csproj
@@ -50,7 +50,6 @@
       <PackageReference Include="MyJetWallet.Service.Liquidity.Portfolio.Client" Version="1.6.8" />
       <PackageReference Include="MyJetWallet.Service.Liquidity.PortfolioHedger.Client" Version="1.1.6" />
       <PackageReference Include="MyJetWallet.Service.Liquidity.Reports.Client" Version="1.1.7" />
-      <PackageReference Include="MyJetWallet.Service.MatchingEngine.PriceSource.Client" Version="3.0.0" />
       <PackageReference Include="MyJetWallet.Service.MessageTemplates.Client" Version="1.0.3" />
       <PackageReference Include="MyJetWallet.Service.NewsRepository.Client" Version="1.0.0" />
       <PackageReference Include="MyJetWallet.Service.PriceHistory.Client" Version="1.1.5" />
@@ -93,6 +92,11 @@
       <None Update="Dockerfile">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Components\Books" />
+      <Folder Include="Components\Liquidity\Market2\LpInfo" />
     </ItemGroup>
 
 </Project>
